cabal-version: 2.2
name:
  contiguous-mmap
version:
  0.1
synopsis:
  memory map contiguous data structures
description:
  memory map contiguous data structures, using the contiguous'
  package interface to the structures defined in primitive.
homepage:
  https://github.com/chessai/contiguous-mmap
bug-reports:
  https://github.com/chessai/contiguous-mmap/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data, System
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Data.Primitive.Contiguous.MMap
  build-depends:
    , base >= 4.10.1 && < 4.13
    , contiguous >= 0.3 && < 0.4
    , mmap >= 0.5 && < 0.6
    , primitive >= 0.6.4 && < 0.7
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    , base
    , contiguous
    , contiguous-mmap
    , primitive
    , QuickCheck
    , temporary
 
source-repository head
  type:
    git
  location:
    https://github.com/chessai/contiguous-mmap.git
